fixed spacing issue, fixed font for footer

--- a/index.css
+++ b/index.css
@@ -108,6 +108,7 @@
 #about {
     background-color: rgb(24,28,31);
     color: white;
+    padding: 12px;
 }
 #about-header {
     font-size: 1.5em;
@@ -158,4 +159,5 @@ footer {
     padding: 12px;
     padding-top: 30px;
     padding-bottom: 30px;
+    font-family: 'Open Sans';
 }
